[package]
name = "tapo"
version = "0.7.9"
edition = "2021"
license = "MIT"
authors = ["Mihai Dinculescu <mihai.dinculescu@outlook.com>"]
description = "Unofficial Tapo API Client. Works with TP-Link Tapo smart devices. Tested with light bulbs (L510, L520, L530, L610, L630), light strips (L900, L920, L930), plugs (P100, P105, P110, P115), hubs (H100), switches (S200B) and sensors (KE100, T100, T110, T300, T310, T315)."
keywords = ["IOT", "tapo", "smart-home", "smart-bulb", "smart-plug"]
categories = ["hardware-support", "embedded", "development-tools"]
readme = "README.md"
repository = "https://github.com/mihai-dinculescu/tapo"

[features]
default = []
python = ["dep:pyo3"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base16ct = { version = "0.2", features = ["alloc"] }
base64 = "0.21"
chrono = { workspace = true, default-features = false, features = [
    "clock",
    "serde",
] }
isahc = { version = "1.7", features = ["json", "cookies"] }
itertools = "0.12"
lazy_static = "1.4"
log = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive", "serde_derive"] }
serde_json = "1.0"
serde_with = "3.5"
thiserror = "1.0"
uuid = { version = "1.7", features = ["serde", "v4"] }

pyo3 = { workspace = true, features = ["serde", "chrono"], optional = true }
cbc = { version = "0.1.2", features = ["alloc"] }
aes = "0.8.3"
sha1 = "0.10.6"
sha2 = "0.10.8"
rsa = "0.9.6"

[dev-dependencies]
pretty_env_logger = "0.5"
tokio = { workspace = true, default-features = false, features = [
    "rt-multi-thread",
    "macros",
] }
